commit bilingual contents

--- a/docs/docs-ref-autogen/custom-functions-runtime/customfunctions.streaminginvocation.yml
+++ b/docs/docs-ref-autogen/custom-functions-runtime/customfunctions.streaminginvocation.yml
@@ -2,10 +2,9 @@
 items:
   - uid: custom-functions-runtime.CustomFunctions.StreamingInvocation
     summary: |-
-      <span data-ttu-id="27a62-101">提供有关调用流式处理自定义函数的信息。</span><span class="sxs-lookup"><span data-stu-id="27a62-101">Provides information about the invocation of a streaming custom function.</span></span> <span data-ttu-id="27a62-102">流式处理自定义函数可提供可以随时间变化的结果。</span><span class="sxs-lookup"><span data-stu-id="27a62-102">A streaming custom function can provide results which can change over time.</span></span>
+      <span data-ttu-id="5ff59-101">提供有关调用流式处理自定义函数的信息。</span><span class="sxs-lookup"><span data-stu-id="5ff59-101">Provides information about the invocation of a streaming custom function.</span></span> <span data-ttu-id="5ff59-102">流式处理自定义函数可提供可以随时间变化的结果。</span><span class="sxs-lookup"><span data-stu-id="5ff59-102">A streaming custom function can provide results which can change over time.</span></span>
 
-      <span data-ttu-id="27a62-103">调用`setResult()`一次或多次以提供结果, 而不是从函数返回结果。</span><span class="sxs-lookup"><span data-stu-id="27a62-103">Call `setResult()` one or more times to provide the result instead of returning a result from the function.</span></span>
-    isPreview: true
+      <span data-ttu-id="5ff59-103">调用`setResult()`一次或多次以提供结果, 而不是从函数返回结果。</span><span class="sxs-lookup"><span data-stu-id="5ff59-103">Call `setResult()` one or more times to provide the result instead of returning a result from the function.</span></span>
     name: CustomFunctions.StreamingInvocation
     fullName: CustomFunctions.StreamingInvocation
     langs:
@@ -17,8 +16,7 @@ items:
     children:
       - custom-functions-runtime.CustomFunctions.StreamingInvocation.setResult
   - uid: custom-functions-runtime.CustomFunctions.StreamingInvocation.setResult
-    summary: <span data-ttu-id="27a62-104">设置自定义函数的结果。</span><span class="sxs-lookup"><span data-stu-id="27a62-104">Set the result for the custom function.</span></span> <span data-ttu-id="27a62-105">可以多次调用。</span><span class="sxs-lookup"><span data-stu-id="27a62-105">May be called more than once.</span></span>
-    isPreview: true
+    summary: <span data-ttu-id="5ff59-104">设置自定义函数的结果。</span><span class="sxs-lookup"><span data-stu-id="5ff59-104">Set the result for the custom function.</span></span> <span data-ttu-id="5ff59-105">可以多次调用。</span><span class="sxs-lookup"><span data-stu-id="5ff59-105">May be called more than once.</span></span>
     name: setResult
     fullName: setResult
     langs:
