--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions
     summary: |-
-      <span data-ttu-id="0a5f0-101">代表工作簿中的单元格批注答复对象。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-101">Represents a cell comment reply object in the workbook.</span></span>
+      <span data-ttu-id="341b5-101">代表工作簿中的单元格批注答复对象。</span><span class="sxs-lookup"><span data-stu-id="341b5-101">Represents a cell comment reply object in the workbook.</span></span>
 
-      <span data-ttu-id="0a5f0-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a5f0-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="341b5-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b5-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.CommentReplyLoadOptions
     fullName: Excel.Interfaces.CommentReplyLoadOptions
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.authorEmail
     summary: |-
-      <span data-ttu-id="0a5f0-103">获取批注回复作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-103">Get author email of the comment reply.</span></span>
+      <span data-ttu-id="341b5-103">获取批注回复作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="341b5-103">Gets the email of the comment reply's author.</span></span>
 
-      <span data-ttu-id="0a5f0-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a5f0-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="341b5-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b5-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -49,9 +49,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.authorName
     summary: |-
-      <span data-ttu-id="0a5f0-105">获取批注回复作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-105">Get author name of the comment reply.</span></span>
+      <span data-ttu-id="341b5-105">获取批注回复作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="341b5-105">Gets the name of the comment reply's author.</span></span>
 
-      <span data-ttu-id="0a5f0-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a5f0-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="341b5-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b5-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorName
     fullName: authorName
@@ -65,9 +65,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.content
     summary: |-
-      <span data-ttu-id="0a5f0-107">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-107">Get or set the content.</span></span>
+      <span data-ttu-id="341b5-107">获取或设置批注回复的内容。</span><span class="sxs-lookup"><span data-stu-id="341b5-107">Gets or sets the comment reply's content.</span></span> <span data-ttu-id="341b5-108">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="341b5-108">The string is plain text.</span></span>
 
-      <span data-ttu-id="0a5f0-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a5f0-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="341b5-109">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b5-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
@@ -81,9 +81,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.creationDate
     summary: |-
-      <span data-ttu-id="0a5f0-109">获取批注回复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-109">Get creation time of the comment reply.</span></span>
+      <span data-ttu-id="341b5-110">获取批注回复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="341b5-110">Gets the creation time of the comment reply.</span></span>
 
-      <span data-ttu-id="0a5f0-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a5f0-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="341b5-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b5-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -97,9 +97,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentReplyLoadOptions.id
     summary: |-
-      <span data-ttu-id="0a5f0-111">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-111">Represents the comment reply identifier.</span></span> <span data-ttu-id="0a5f0-112">只读。</span><span class="sxs-lookup"><span data-stu-id="0a5f0-112">Read-only.</span></span>
+      <span data-ttu-id="341b5-112">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="341b5-112">Represents the comment reply identifier.</span></span> <span data-ttu-id="341b5-113">只读。</span><span class="sxs-lookup"><span data-stu-id="341b5-113">Read-only.</span></span>
 
-      <span data-ttu-id="0a5f0-113">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0a5f0-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="341b5-114">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="341b5-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: id
     fullName: id
