--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.CommentUpdateData
-    summary: '<span data-ttu-id="53a38-101">一个用于更新 comment 对象上的数据的接口, 可用于 "comment. set (</span><span class="sxs-lookup"><span data-stu-id="53a38-101">An interface for updating data on the Comment object, for use in "comment.set(</span></span><!-- --><span data-ttu-id="53a38-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="53a38-102"></span></span><!-- --><span data-ttu-id="53a38-103">)".</span><span class="sxs-lookup"><span data-stu-id="53a38-103"></span></span>'
+    summary: '<span data-ttu-id="66619-101">一个用于更新 Comment 对象上的数据的接口, 可用于 "comment. set (</span><span class="sxs-lookup"><span data-stu-id="66619-101">An interface for updating data on the Comment object, for use in "comment.set(</span></span><!-- --><span data-ttu-id="66619-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="66619-102"></span></span><!-- --><span data-ttu-id="66619-103">)".</span><span class="sxs-lookup"><span data-stu-id="66619-103"></span></span>'
     name: Excel.Interfaces.CommentUpdateData
     fullName: Excel.Interfaces.CommentUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - excel.Excel.Interfaces.CommentUpdateData.content
   - uid: excel.Excel.Interfaces.CommentUpdateData.content
     summary: |-
-      <span data-ttu-id="53a38-104">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="53a38-104">Get or set the content.</span></span>
+      <span data-ttu-id="66619-104">获取或设置批注的内容。</span><span class="sxs-lookup"><span data-stu-id="66619-104">Gets or sets the comment's content.</span></span> <span data-ttu-id="66619-105">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="66619-105">The string is plain text.</span></span>
 
-      <span data-ttu-id="53a38-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53a38-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="66619-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="66619-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
