--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.SlicerItemLoadOptions
     summary: |-
-      <span data-ttu-id="b90d0-101">表示切片器中的切片器项目。</span><span class="sxs-lookup"><span data-stu-id="b90d0-101">Represents a slicer item in a slicer.</span></span>
+      <span data-ttu-id="b58bd-101">表示切片器中的切片器项目。</span><span class="sxs-lookup"><span data-stu-id="b58bd-101">Represents a slicer item in a slicer.</span></span>
 
-      <span data-ttu-id="b90d0-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b90d0-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b58bd-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b58bd-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.SlicerItemLoadOptions
     fullName: Excel.Interfaces.SlicerItemLoadOptions
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.hasData
     summary: |-
-      <span data-ttu-id="b90d0-103">如果切片器项包含数据，则为 True。</span><span class="sxs-lookup"><span data-stu-id="b90d0-103">True if the slicer item has data.</span></span>
+      <span data-ttu-id="b58bd-103">如果切片器项包含数据，则为 True。</span><span class="sxs-lookup"><span data-stu-id="b58bd-103">True if the slicer item has data.</span></span>
 
-      <span data-ttu-id="b90d0-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b90d0-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b58bd-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b58bd-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: hasData
     fullName: hasData
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.isSelected
     summary: |-
-      <span data-ttu-id="b90d0-105">如果选择了切片器项，则为 True。</span><span class="sxs-lookup"><span data-stu-id="b90d0-105">True if the slicer item is selected.</span></span> <span data-ttu-id="b90d0-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="b90d0-106">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="b90d0-107">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="b90d0-107">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
+      <span data-ttu-id="b58bd-105">如果选择了切片器项，则为 True。</span><span class="sxs-lookup"><span data-stu-id="b58bd-105">True if the slicer item is selected.</span></span> <span data-ttu-id="b58bd-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="b58bd-106">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="b58bd-107">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="b58bd-107">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
-      <span data-ttu-id="b90d0-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b90d0-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b58bd-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b58bd-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: isSelected
     fullName: isSelected
@@ -64,9 +64,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.key
     summary: |-
-      <span data-ttu-id="b90d0-109">表示代表切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="b90d0-109">Represents the unique value representing the slicer item.</span></span>
+      <span data-ttu-id="b58bd-109">表示代表切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="b58bd-109">Represents the unique value representing the slicer item.</span></span>
 
-      <span data-ttu-id="b90d0-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b90d0-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b58bd-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b58bd-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: key
     fullName: key
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemLoadOptions.name
     summary: |-
-      <span data-ttu-id="b90d0-111">表示 UI 上显示的值。</span><span class="sxs-lookup"><span data-stu-id="b90d0-111">Represents the value displayed on UI.</span></span>
+      <span data-ttu-id="b58bd-111">代表 UI 中显示的标题。</span><span class="sxs-lookup"><span data-stu-id="b58bd-111">Represents the title displayed in the UI.</span></span>
 
-      <span data-ttu-id="b90d0-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b90d0-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b58bd-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b58bd-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
