--- a/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.TableChangedEventArgs
     summary: |-
-      <span data-ttu-id="84916-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="84916-101">Provides information about the table that raised the Changed event.</span></span>
+      <span data-ttu-id="ec745-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="ec745-101">Provides information about the table that raised the Changed event.</span></span>
 
-      <span data-ttu-id="84916-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.TableChangedEventArgs
     fullName: Excel.TableChangedEventArgs
     langs:
@@ -23,9 +23,9 @@ items:
       - excel.Excel.TableChangedEventArgs.worksheetId
   - uid: excel.Excel.TableChangedEventArgs.getRange
     summary: |-
-      <span data-ttu-id="84916-103">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="84916-103">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
+      <span data-ttu-id="ec745-103">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="ec745-103">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
 
-      <span data-ttu-id="84916-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getRange(ctx)
     fullName: getRange(ctx)
     langs:
@@ -44,9 +44,9 @@ items:
             - excel.Excel.RequestContext
   - uid: excel.Excel.TableChangedEventArgs.getRangeOrNullObject
     summary: |-
-      <span data-ttu-id="84916-105">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="84916-105">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="84916-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="84916-106">It might return null object.</span></span>
+      <span data-ttu-id="ec745-105">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="ec745-105">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="ec745-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="ec745-106">It might return null object.</span></span>
 
-      <span data-ttu-id="84916-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getRangeOrNullObject(ctx)
     fullName: getRangeOrNullObject(ctx)
     langs:
@@ -65,9 +65,9 @@ items:
             - excel.Excel.RequestContext
   - uid: excel.Excel.TableChangedEventArgs.address
     summary: |-
-      <span data-ttu-id="84916-108">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="84916-108">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
+      <span data-ttu-id="ec745-108">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="ec745-108">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
 
-      <span data-ttu-id="84916-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: address
     fullName: address
     langs:
@@ -80,9 +80,9 @@ items:
           - string
   - uid: excel.Excel.TableChangedEventArgs.changeType
     summary: |-
-      <span data-ttu-id="84916-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="84916-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="84916-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="84916-111">See Excel.DataChangeType for details.</span></span>
+      <span data-ttu-id="ec745-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="ec745-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="ec745-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="ec745-111">See Excel.DataChangeType for details.</span></span>
 
-      <span data-ttu-id="84916-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: changeType
     fullName: changeType
     langs:
@@ -95,9 +95,9 @@ items:
           - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
   - uid: excel.Excel.TableChangedEventArgs.details
     summary: |-
-      <span data-ttu-id="84916-113">表示更改详情的信息</span><span class="sxs-lookup"><span data-stu-id="84916-113">Represents the information about the change detail</span></span>
+      <span data-ttu-id="ec745-113">表示有关更改详细信息的信息。</span><span class="sxs-lookup"><span data-stu-id="ec745-113">Represents the information about the change detail.</span></span> <span data-ttu-id="ec745-114">当对单个单元格触发 Changed 事件时, 可以检索此属性。</span><span class="sxs-lookup"><span data-stu-id="ec745-114">This property can be retrieved when the Changed event is triggered on a single cell.</span></span> <span data-ttu-id="ec745-115">如果已更改的事件在多个单元格上触发, 则无法检索此属性。</span><span class="sxs-lookup"><span data-stu-id="ec745-115">If the Changed event is triggered on multiple cells, this property cannot be retrieved.</span></span>
 
-      <span data-ttu-id="84916-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: details
     fullName: details
     langs:
@@ -111,7 +111,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="84916-115">示例</span><span class="sxs-lookup"><span data-stu-id="84916-115">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="ec745-117">示例</span><span class="sxs-lookup"><span data-stu-id="ec745-117">Examples</span></span>
 
           ```typescript
           async function onTableChanged(eventArgs: Excel.TableChangedEventArgs) {
@@ -126,9 +126,9 @@ items:
           ```
   - uid: excel.Excel.TableChangedEventArgs.source
     summary: |-
-      <span data-ttu-id="84916-116">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="84916-116">Gets the source of the event.</span></span> <span data-ttu-id="84916-117">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="84916-117">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="ec745-118">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="ec745-118">Gets the source of the event.</span></span> <span data-ttu-id="ec745-119">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="ec745-119">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="84916-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: source
     fullName: source
     langs:
@@ -141,9 +141,9 @@ items:
           - Excel.EventSource | "Local" | "Remote"
   - uid: excel.Excel.TableChangedEventArgs.tableId
     summary: |-
-      <span data-ttu-id="84916-119">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="84916-119">Gets the id of the table in which the data changed.</span></span>
+      <span data-ttu-id="ec745-121">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="ec745-121">Gets the id of the table in which the data changed.</span></span>
 
-      <span data-ttu-id="84916-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-122">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tableId
     fullName: tableId
     langs:
@@ -157,7 +157,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="84916-121">示例</span><span class="sxs-lookup"><span data-stu-id="84916-121">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="ec745-123">示例</span><span class="sxs-lookup"><span data-stu-id="ec745-123">Examples</span></span>
 
           ```typescript
           async function onChange(event) {
@@ -176,9 +176,9 @@ items:
           ```
   - uid: excel.Excel.TableChangedEventArgs.type
     summary: |-
-      <span data-ttu-id="84916-122">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="84916-122">Gets the type of the event.</span></span> <span data-ttu-id="84916-123">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="84916-123">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="ec745-124">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="ec745-124">Gets the type of the event.</span></span> <span data-ttu-id="ec745-125">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="ec745-125">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="84916-124">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-126">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -191,9 +191,9 @@ items:
           - '"TableChanged"'
   - uid: excel.Excel.TableChangedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="84916-125">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="84916-125">Gets the id of the worksheet in which the data changed.</span></span>
+      <span data-ttu-id="ec745-127">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="ec745-127">Gets the id of the worksheet in which the data changed.</span></span>
 
-      <span data-ttu-id="84916-126">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84916-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ec745-128">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ec745-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheetId
     fullName: worksheetId
     langs:
@@ -207,7 +207,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="84916-127">示例</span><span class="sxs-lookup"><span data-stu-id="84916-127">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="ec745-129">示例</span><span class="sxs-lookup"><span data-stu-id="ec745-129">Examples</span></span>
 
           ```typescript
           async function onChange(event) {
