--- a/docs/docs-ref-autogen/custom-functions-runtime.yml
+++ b/docs/docs-ref-autogen/custom-functions-runtime.yml
@@ -9,14 +9,11 @@ items:
     children:
       - custom-functions-runtime.CustomFunctions.associate
       - custom-functions-runtime.CustomFunctions.associate_1
-      - custom-functions-runtime.CustomFunctions.CancelableHandler
       - custom-functions-runtime.CustomFunctions.CancelableInvocation
       - custom-functions-runtime.CustomFunctions.Invocation
-      - custom-functions-runtime.CustomFunctions.StreamingHandler
       - custom-functions-runtime.CustomFunctions.StreamingInvocation
   - uid: custom-functions-runtime.CustomFunctions.associate
-    summary: <span data-ttu-id="1e55e-101">将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性所指定的名称相关联。</span><span class="sxs-lookup"><span data-stu-id="1e55e-101">Associates the JavaScript function to the name given by the "id" property in the metadata JSON file.</span></span>
-    isPreview: true
+    summary: <span data-ttu-id="e5af1-101">将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性所指定的名称相关联。</span><span class="sxs-lookup"><span data-stu-id="e5af1-101">Associates the JavaScript function to the name given by the "id" property in the metadata JSON file.</span></span>
     name: CustomFunctions.associate
     fullName: CustomFunctions.associate
     langs:
@@ -38,8 +35,7 @@ items:
           type:
             - Function
   - uid: custom-functions-runtime.CustomFunctions.associate_1
-    summary: <span data-ttu-id="1e55e-102">将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性指定的名称相关联。</span><span class="sxs-lookup"><span data-stu-id="1e55e-102">Associates the JavaScript functions to the names given by the "id" properties in the metadata JSON file.</span></span>
-    isPreview: true
+    summary: <span data-ttu-id="e5af1-102">将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性指定的名称相关联。</span><span class="sxs-lookup"><span data-stu-id="e5af1-102">Associates the JavaScript functions to the names given by the "id" properties in the metadata JSON file.</span></span>
     name: CustomFunctions.associate_1
     fullName: CustomFunctions.associate_1
     langs:
@@ -57,13 +53,9 @@ items:
           type:
             - '{ [key: string]: Function }'
 references:
-  - uid: custom-functions-runtime.CustomFunctions.CancelableHandler
-    name: CustomFunctions.CancelableHandler
   - uid: custom-functions-runtime.CustomFunctions.CancelableInvocation
     name: CustomFunctions.CancelableInvocation
   - uid: custom-functions-runtime.CustomFunctions.Invocation
     name: CustomFunctions.Invocation
-  - uid: custom-functions-runtime.CustomFunctions.StreamingHandler
-    name: CustomFunctions.StreamingHandler
   - uid: custom-functions-runtime.CustomFunctions.StreamingInvocation
     name: CustomFunctions.StreamingInvocation
