--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesfill.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesfill.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.CellPropertiesFill
     summary: |-
-      <span data-ttu-id="8e468-101">表示的`format.fill`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="8e468-101">Represents the `format.fill` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="8e468-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="8e468-102"></span></span><!-- --><span data-ttu-id="8e468-103">, 和`getColumnProperties`或的`format.fill`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="8e468-103">, and `getColumnProperties` or the `format.fill` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="8e468-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="8e468-104"></span></span><!-- --><span data-ttu-id="8e468-105">, 并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="8e468-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="8e468-106">.</span><span class="sxs-lookup"><span data-stu-id="8e468-106"></span></span>
+      <span data-ttu-id="45ccc-101">表示的`format.fill`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="45ccc-101">Represents the `format.fill` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="45ccc-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="45ccc-102"></span></span><!-- --><span data-ttu-id="45ccc-103">, 和`getColumnProperties`或的`format.fill`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="45ccc-103">, and `getColumnProperties` or the `format.fill` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="45ccc-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="45ccc-104"></span></span><!-- --><span data-ttu-id="45ccc-105">, 并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="45ccc-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="45ccc-106">.</span><span class="sxs-lookup"><span data-stu-id="45ccc-106"></span></span>
 
-      <span data-ttu-id="8e468-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8e468-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="45ccc-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45ccc-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFill
     fullName: Excel.CellPropertiesFill
     langs:
@@ -19,9 +19,9 @@ items:
       - excel.Excel.CellPropertiesFill.tintAndShade
   - uid: excel.Excel.CellPropertiesFill.color
     summary: |-
-      <span data-ttu-id="8e468-108">表示`format.fill.color`属性。</span><span class="sxs-lookup"><span data-stu-id="8e468-108">Represents the `format.fill.color` property.</span></span>
+      <span data-ttu-id="45ccc-108">表示`format.fill.color`属性。</span><span class="sxs-lookup"><span data-stu-id="45ccc-108">Represents the `format.fill.color` property.</span></span>
 
-      <span data-ttu-id="8e468-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8e468-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="45ccc-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45ccc-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -32,11 +32,88 @@ items:
       return:
         type:
           - string
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="45ccc-110">示例</span><span class="sxs-lookup"><span data-stu-id="45ccc-110">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getActiveWorksheet();
+
+              // Creating the SettableCellProperties objects to use for the range.
+              // In your add-in, these should be created once, outside the function.
+              const topHeaderProps: Excel.SettableCellProperties = {
+                  // The style property takes a string matching the name of an Excel style.
+                  // Note that a style will overwrite any formatting,
+                  // so do not use the format property with the style property.
+                  style: "Heading1"
+              };
+
+              const headerProps: Excel.SettableCellProperties = {
+                  // Any subproperties of format that are not set will not be changed when these cell properties are set.
+                  format: {
+                      fill: {
+                          color: "Blue"
+                      },
+                      font: {
+                          color: "White",
+                          bold: true
+                      }
+                  }
+              };
+
+              const nonApplicableProps: Excel.SettableCellProperties = {
+                  format: {
+                      fill: {
+                          pattern: Excel.FillPattern.gray25
+                      },
+                      font: {
+                          color: "Gray",
+                          italic: true
+                      }
+                  }
+              };
+
+              const matchupScoreProps: Excel.SettableCellProperties = {
+                  format: {
+                      borders: {
+                          bottom: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          left: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          right: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          top: {
+                              style: Excel.BorderLineStyle.continuous
+                          }
+                      }
+                  }
+              };
+
+              const range = sheet.getRange("A1:E5");
+
+              // You can use empty JSON objects to avoid changing a cell's properties.
+              range.setCellProperties([
+                  [topHeaderProps, {}, {}, {}, {}],
+                  [{}, {}, headerProps, headerProps, headerProps],
+                  [{}, headerProps, nonApplicableProps, matchupScoreProps, matchupScoreProps],
+                  [{}, headerProps, matchupScoreProps, nonApplicableProps, matchupScoreProps],
+                  [{}, headerProps, matchupScoreProps, matchupScoreProps, nonApplicableProps]
+              ]);
+
+              sheet.getUsedRange().format.autofitColumns();
+              await context.sync();
+          });
+          ```
   - uid: excel.Excel.CellPropertiesFill.pattern
     summary: |-
-      <span data-ttu-id="8e468-110">表示`format.fill.pattern`属性。</span><span class="sxs-lookup"><span data-stu-id="8e468-110">Represents the `format.fill.pattern` property.</span></span>
+      <span data-ttu-id="45ccc-111">表示`format.fill.pattern`属性。</span><span class="sxs-lookup"><span data-stu-id="45ccc-111">Represents the `format.fill.pattern` property.</span></span>
 
-      <span data-ttu-id="8e468-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8e468-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="45ccc-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45ccc-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: pattern
     fullName: pattern
     langs:
@@ -49,9 +126,9 @@ items:
           - Excel.FillPattern | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"
   - uid: excel.Excel.CellPropertiesFill.patternColor
     summary: |-
-      <span data-ttu-id="8e468-112">表示`format.fill.patternColor`属性。</span><span class="sxs-lookup"><span data-stu-id="8e468-112">Represents the `format.fill.patternColor` property.</span></span>
+      <span data-ttu-id="45ccc-113">表示`format.fill.patternColor`属性。</span><span class="sxs-lookup"><span data-stu-id="45ccc-113">Represents the `format.fill.patternColor` property.</span></span>
 
-      <span data-ttu-id="8e468-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8e468-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="45ccc-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45ccc-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternColor
     fullName: patternColor
     langs:
@@ -64,9 +141,9 @@ items:
           - string
   - uid: excel.Excel.CellPropertiesFill.patternTintAndShade
     summary: |-
-      <span data-ttu-id="8e468-114">表示`format.fill.patternTintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="8e468-114">Represents the `format.fill.patternTintAndShade` property.</span></span>
+      <span data-ttu-id="45ccc-115">表示`format.fill.patternTintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="45ccc-115">Represents the `format.fill.patternTintAndShade` property.</span></span>
 
-      <span data-ttu-id="8e468-115">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8e468-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="45ccc-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45ccc-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -79,9 +156,9 @@ items:
           - number
   - uid: excel.Excel.CellPropertiesFill.tintAndShade
     summary: |-
-      <span data-ttu-id="8e468-116">表示`format.fill.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="8e468-116">Represents the `format.fill.tintAndShade` property.</span></span>
+      <span data-ttu-id="45ccc-117">表示`format.fill.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="45ccc-117">Represents the `format.fill.tintAndShade` property.</span></span>
 
-      <span data-ttu-id="8e468-117">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8e468-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="45ccc-118">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45ccc-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
