--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesfillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesfillloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.CellPropertiesFillLoadOptions
     summary: |-
-      <span data-ttu-id="c3126-101">指定要在`format.fill`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="c3126-101">Specifies which properties to load on the `format.fill` object.</span></span>
+      <span data-ttu-id="ff632-101">指定要在`format.fill`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="ff632-101">Specifies which properties to load on the `format.fill` object.</span></span>
 
-      <span data-ttu-id="c3126-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ff632-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff632-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFillLoadOptions
     fullName: Excel.CellPropertiesFillLoadOptions
     langs:
@@ -19,9 +19,9 @@ items:
       - excel.Excel.CellPropertiesFillLoadOptions.tintAndShade
   - uid: excel.Excel.CellPropertiesFillLoadOptions.color
     summary: |-
-      <span data-ttu-id="c3126-103">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-103">Specifies whether to load on the `color` property.</span></span>
+      <span data-ttu-id="ff632-103">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ff632-103">Specifies whether to load on the `color` property.</span></span>
 
-      <span data-ttu-id="c3126-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ff632-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff632-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -32,11 +32,41 @@ items:
       return:
         type:
           - boolean
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="ff632-105">示例</span><span class="sxs-lookup"><span data-stu-id="ff632-105">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const cell = context.workbook.getActiveCell();
+
+              // Define the cell properties to get by setting the matching LoadOptions to true.
+              const propertiesToGet = cell.getCellProperties({
+                  address: true,
+                  format: {
+                      fill: {
+                          color: true
+                      },
+                      font: {
+                          color: true
+                      }
+                  },
+                  style: true
+              });
+
+              // Sync to get the data from the workbook.
+              await context.sync();
+              const cellProperties = propertiesToGet.value[0][0];
+              console.log(
+                  `Address: ${cellProperties.address}\nStyle: ${cellProperties.style}\nFill Color: ${cellProperties.format.fill.color}\nFont Color: ${cellProperties.format.font.color}`);
+          });
+          ```
   - uid: excel.Excel.CellPropertiesFillLoadOptions.pattern
     summary: |-
-      <span data-ttu-id="c3126-105">指定是否在`pattern`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-105">Specifies whether to load on the `pattern` property.</span></span>
+      <span data-ttu-id="ff632-106">指定是否在`pattern`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ff632-106">Specifies whether to load on the `pattern` property.</span></span>
 
-      <span data-ttu-id="c3126-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ff632-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff632-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: pattern
     fullName: pattern
     langs:
@@ -49,9 +79,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.patternColor
     summary: |-
-      <span data-ttu-id="c3126-107">指定是否在`patternColor`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-107">Specifies whether to load on the `patternColor` property.</span></span>
+      <span data-ttu-id="ff632-108">指定是否在`patternColor`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ff632-108">Specifies whether to load on the `patternColor` property.</span></span>
 
-      <span data-ttu-id="c3126-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ff632-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff632-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternColor
     fullName: patternColor
     langs:
@@ -64,9 +94,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.patternTintAndShade
     summary: |-
-      <span data-ttu-id="c3126-109">指定是否在`patternTintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-109">Specifies whether to load on the `patternTintAndShade` property.</span></span>
+      <span data-ttu-id="ff632-110">指定是否在`patternTintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ff632-110">Specifies whether to load on the `patternTintAndShade` property.</span></span>
 
-      <span data-ttu-id="c3126-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ff632-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff632-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -79,9 +109,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.tintAndShade
     summary: |-
-      <span data-ttu-id="c3126-111">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-111">Specifies whether to load on the `tintAndShade` property.</span></span>
+      <span data-ttu-id="ff632-112">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ff632-112">Specifies whether to load on the `tintAndShade` property.</span></span>
 
-      <span data-ttu-id="c3126-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ff632-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ff632-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
