--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesfont.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesfont.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.CellPropertiesFont
     summary: |-
-      <span data-ttu-id="8a987-101">表示的`format.font`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="8a987-101">Represents the `format.font` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="8a987-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="8a987-102"></span></span><!-- --><span data-ttu-id="8a987-103">, 和`getColumnProperties`或的`format.font`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="8a987-103">, and `getColumnProperties` or the `format.font` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="8a987-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="8a987-104"></span></span><!-- --><span data-ttu-id="8a987-105">, 并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="8a987-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="8a987-106">.</span><span class="sxs-lookup"><span data-stu-id="8a987-106"></span></span>
+      <span data-ttu-id="e89f6-101">表示的`format.font`属性`getCellProperties`</span><span class="sxs-lookup"><span data-stu-id="e89f6-101">Represents the `format.font` properties of `getCellProperties`</span></span><!-- --><span data-ttu-id="e89f6-102">, `getRowProperties`</span><span class="sxs-lookup"><span data-stu-id="e89f6-102"></span></span><!-- --><span data-ttu-id="e89f6-103">, 和`getColumnProperties`或的`format.font`输入参数`setCellProperties`</span><span class="sxs-lookup"><span data-stu-id="e89f6-103">, and `getColumnProperties` or the `format.font` input parameter of `setCellProperties`</span></span><!-- --><span data-ttu-id="e89f6-104">, `setRowProperties`</span><span class="sxs-lookup"><span data-stu-id="e89f6-104"></span></span><!-- --><span data-ttu-id="e89f6-105">, 并`setColumnProperties`</span><span class="sxs-lookup"><span data-stu-id="e89f6-105">, and `setColumnProperties`</span></span><!-- --><span data-ttu-id="e89f6-106">.</span><span class="sxs-lookup"><span data-stu-id="e89f6-106"></span></span>
 
-      <span data-ttu-id="8a987-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFont
     fullName: Excel.CellPropertiesFont
     langs:
@@ -24,9 +24,9 @@ items:
       - excel.Excel.CellPropertiesFont.underline
   - uid: excel.Excel.CellPropertiesFont.bold
     summary: |-
-      <span data-ttu-id="8a987-108">表示`format.font.bold`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-108">Represents the `format.font.bold` property.</span></span>
+      <span data-ttu-id="e89f6-108">表示`format.font.bold`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-108">Represents the `format.font.bold` property.</span></span>
 
-      <span data-ttu-id="8a987-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bold
     fullName: bold
     langs:
@@ -39,9 +39,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFont.color
     summary: |-
-      <span data-ttu-id="8a987-110">表示`format.font.color`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-110">Represents the `format.font.color` property.</span></span>
+      <span data-ttu-id="e89f6-110">表示`format.font.color`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-110">Represents the `format.font.color` property.</span></span>
 
-      <span data-ttu-id="8a987-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -52,11 +52,88 @@ items:
       return:
         type:
           - string
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="e89f6-112">示例</span><span class="sxs-lookup"><span data-stu-id="e89f6-112">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getActiveWorksheet();
+
+              // Creating the SettableCellProperties objects to use for the range.
+              // In your add-in, these should be created once, outside the function.
+              const topHeaderProps: Excel.SettableCellProperties = {
+                  // The style property takes a string matching the name of an Excel style.
+                  // Note that a style will overwrite any formatting,
+                  // so do not use the format property with the style property.
+                  style: "Heading1"
+              };
+
+              const headerProps: Excel.SettableCellProperties = {
+                  // Any subproperties of format that are not set will not be changed when these cell properties are set.
+                  format: {
+                      fill: {
+                          color: "Blue"
+                      },
+                      font: {
+                          color: "White",
+                          bold: true
+                      }
+                  }
+              };
+
+              const nonApplicableProps: Excel.SettableCellProperties = {
+                  format: {
+                      fill: {
+                          pattern: Excel.FillPattern.gray25
+                      },
+                      font: {
+                          color: "Gray",
+                          italic: true
+                      }
+                  }
+              };
+
+              const matchupScoreProps: Excel.SettableCellProperties = {
+                  format: {
+                      borders: {
+                          bottom: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          left: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          right: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          top: {
+                              style: Excel.BorderLineStyle.continuous
+                          }
+                      }
+                  }
+              };
+
+              const range = sheet.getRange("A1:E5");
+
+              // You can use empty JSON objects to avoid changing a cell's properties.
+              range.setCellProperties([
+                  [topHeaderProps, {}, {}, {}, {}],
+                  [{}, {}, headerProps, headerProps, headerProps],
+                  [{}, headerProps, nonApplicableProps, matchupScoreProps, matchupScoreProps],
+                  [{}, headerProps, matchupScoreProps, nonApplicableProps, matchupScoreProps],
+                  [{}, headerProps, matchupScoreProps, matchupScoreProps, nonApplicableProps]
+              ]);
+
+              sheet.getUsedRange().format.autofitColumns();
+              await context.sync();
+          });
+          ```
   - uid: excel.Excel.CellPropertiesFont.italic
     summary: |-
-      <span data-ttu-id="8a987-112">表示`format.font.italic`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-112">Represents the `format.font.italic` property.</span></span>
+      <span data-ttu-id="e89f6-113">表示`format.font.italic`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-113">Represents the `format.font.italic` property.</span></span>
 
-      <span data-ttu-id="8a987-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: italic
     fullName: italic
     langs:
@@ -69,9 +146,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFont.name
     summary: |-
-      <span data-ttu-id="8a987-114">表示`format.font.name`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-114">Represents the `format.font.name` property.</span></span>
+      <span data-ttu-id="e89f6-115">表示`format.font.name`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-115">Represents the `format.font.name` property.</span></span>
 
-      <span data-ttu-id="8a987-115">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -84,9 +161,9 @@ items:
           - string
   - uid: excel.Excel.CellPropertiesFont.size
     summary: |-
-      <span data-ttu-id="8a987-116">表示`format.font.size`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-116">Represents the `format.font.size` property.</span></span>
+      <span data-ttu-id="e89f6-117">表示`format.font.size`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-117">Represents the `format.font.size` property.</span></span>
 
-      <span data-ttu-id="8a987-117">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-118">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: size
     fullName: size
     langs:
@@ -99,9 +176,9 @@ items:
           - number
   - uid: excel.Excel.CellPropertiesFont.strikethrough
     summary: |-
-      <span data-ttu-id="8a987-118">表示`format.font.strikethrough`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-118">Represents the `format.font.strikethrough` property.</span></span>
+      <span data-ttu-id="e89f6-119">表示`format.font.strikethrough`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-119">Represents the `format.font.strikethrough` property.</span></span>
 
-      <span data-ttu-id="8a987-119">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-119">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-120">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -114,9 +191,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFont.subscript
     summary: |-
-      <span data-ttu-id="8a987-120">表示`format.font.subscript`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-120">Represents the `format.font.subscript` property.</span></span>
+      <span data-ttu-id="e89f6-121">表示`format.font.subscript`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-121">Represents the `format.font.subscript` property.</span></span>
 
-      <span data-ttu-id="8a987-121">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-122">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: subscript
     fullName: subscript
     langs:
@@ -129,9 +206,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFont.superscript
     summary: |-
-      <span data-ttu-id="8a987-122">表示`format.font.superscript`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-122">Represents the `format.font.superscript` property.</span></span>
+      <span data-ttu-id="e89f6-123">表示`format.font.superscript`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-123">Represents the `format.font.superscript` property.</span></span>
 
-      <span data-ttu-id="8a987-123">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-123">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-124">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: superscript
     fullName: superscript
     langs:
@@ -144,9 +221,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFont.tintAndShade
     summary: |-
-      <span data-ttu-id="8a987-124">表示`format.font.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-124">Represents the `format.font.tintAndShade` property.</span></span>
+      <span data-ttu-id="e89f6-125">表示`format.font.tintAndShade`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-125">Represents the `format.font.tintAndShade` property.</span></span>
 
-      <span data-ttu-id="8a987-125">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-125">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-126">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -159,9 +236,9 @@ items:
           - number
   - uid: excel.Excel.CellPropertiesFont.underline
     summary: |-
-      <span data-ttu-id="8a987-126">表示`format.font.underline`属性。</span><span class="sxs-lookup"><span data-stu-id="8a987-126">Represents the `format.font.underline` property.</span></span>
+      <span data-ttu-id="e89f6-127">表示`format.font.underline`属性。</span><span class="sxs-lookup"><span data-stu-id="e89f6-127">Represents the `format.font.underline` property.</span></span>
 
-      <span data-ttu-id="8a987-127">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8a987-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e89f6-128">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e89f6-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: underline
     fullName: underline
     langs:
