--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.CellPropertiesLoadOptions
     summary: |-
-      <span data-ttu-id="e0bb3-101">表示在用作 "getCellProperties" 方法的一部分时要加载的单元格属性。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-101">Represents which cell properties to load, when used as part of a "range.getCellProperties" method.</span></span>
+      <span data-ttu-id="ffc7d-101">表示在用作 "getCellProperties" 方法的一部分时要加载的单元格属性。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-101">Represents which cell properties to load, when used as part of a "range.getCellProperties" method.</span></span>
 
-      <span data-ttu-id="e0bb3-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesLoadOptions
     fullName: Excel.CellPropertiesLoadOptions
     langs:
@@ -20,9 +20,9 @@ items:
       - excel.Excel.CellPropertiesLoadOptions.style
   - uid: excel.Excel.CellPropertiesLoadOptions.address
     summary: |-
-      <span data-ttu-id="e0bb3-103">指定是否在`address`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-103">Specifies whether to load on the `address` property.</span></span>
+      <span data-ttu-id="ffc7d-103">指定是否在`address`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-103">Specifies whether to load on the `address` property.</span></span>
 
-      <span data-ttu-id="e0bb3-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: address
     fullName: address
     langs:
@@ -33,11 +33,41 @@ items:
       return:
         type:
           - boolean
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="ffc7d-105">示例</span><span class="sxs-lookup"><span data-stu-id="ffc7d-105">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const cell = context.workbook.getActiveCell();
+
+              // Define the cell properties to get by setting the matching LoadOptions to true.
+              const propertiesToGet = cell.getCellProperties({
+                  address: true,
+                  format: {
+                      fill: {
+                          color: true
+                      },
+                      font: {
+                          color: true
+                      }
+                  },
+                  style: true
+              });
+
+              // Sync to get the data from the workbook.
+              await context.sync();
+              const cellProperties = propertiesToGet.value[0][0];
+              console.log(
+                  `Address: ${cellProperties.address}\nStyle: ${cellProperties.style}\nFill Color: ${cellProperties.format.fill.color}\nFont Color: ${cellProperties.format.font.color}`);
+          });
+          ```
   - uid: excel.Excel.CellPropertiesLoadOptions.addressLocal
     summary: |-
-      <span data-ttu-id="e0bb3-105">指定是否在`addressLocal`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-105">Specifies whether to load on the `addressLocal` property.</span></span>
+      <span data-ttu-id="ffc7d-106">指定是否在`addressLocal`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-106">Specifies whether to load on the `addressLocal` property.</span></span>
 
-      <span data-ttu-id="e0bb3-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: addressLocal
     fullName: addressLocal
     langs:
@@ -50,9 +80,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesLoadOptions.format
     summary: |-
-      <span data-ttu-id="e0bb3-107">指定是否在`format`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-107">Specifies whether to load on the `format` property.</span></span>
+      <span data-ttu-id="ffc7d-108">指定是否在`format`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-108">Specifies whether to load on the `format` property.</span></span>
 
-      <span data-ttu-id="e0bb3-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -65,9 +95,9 @@ items:
           - excel.Excel.CellPropertiesFormatLoadOptions
   - uid: excel.Excel.CellPropertiesLoadOptions.hidden
     summary: |-
-      <span data-ttu-id="e0bb3-109">指定是否在`hidden`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-109">Specifies whether to load on the `hidden` property.</span></span>
+      <span data-ttu-id="ffc7d-110">指定是否在`hidden`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-110">Specifies whether to load on the `hidden` property.</span></span>
 
-      <span data-ttu-id="e0bb3-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hidden
     fullName: hidden
     langs:
@@ -80,9 +110,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesLoadOptions.hyperlink
     summary: |-
-      <span data-ttu-id="e0bb3-111">指定是否在`hyperlink`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-111">Specifies whether to load on the `hyperlink` property.</span></span>
+      <span data-ttu-id="ffc7d-112">指定是否在`hyperlink`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-112">Specifies whether to load on the `hyperlink` property.</span></span>
 
-      <span data-ttu-id="e0bb3-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -95,9 +125,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesLoadOptions.style
     summary: |-
-      <span data-ttu-id="e0bb3-113">指定是否在`style`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e0bb3-113">Specifies whether to load on the `style` property.</span></span>
+      <span data-ttu-id="ffc7d-114">指定是否在`style`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="ffc7d-114">Specifies whether to load on the `style` property.</span></span>
 
-      <span data-ttu-id="e0bb3-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bb3-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ffc7d-115">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffc7d-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
