--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions
     summary: |-
-      <span data-ttu-id="a49cb-101">表示属于工作簿的注释对象的集合。</span><span class="sxs-lookup"><span data-stu-id="a49cb-101">Represents a collection of comment objects that are part of the workbook.</span></span>
+      <span data-ttu-id="e5c6e-101">表示属于工作簿的注释对象的集合。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-101">Represents a collection of comment objects that are part of the workbook.</span></span>
 
-      <span data-ttu-id="a49cb-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a49cb-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5c6e-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5c6e-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.CommentCollectionLoadOptions
     fullName: Excel.Interfaces.CommentCollectionLoadOptions
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorEmail
     summary: |-
-      <span data-ttu-id="a49cb-103">对于集合中的每个项目: 获取注释的作者电子邮件。</span><span class="sxs-lookup"><span data-stu-id="a49cb-103">For EACH ITEM in the collection: Get author email of the comment.</span></span>
+      <span data-ttu-id="e5c6e-103">对于集合中的每一项: 获取批注作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-103">For EACH ITEM in the collection: Gets the email of the comment's author.</span></span>
 
-      <span data-ttu-id="a49cb-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a49cb-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5c6e-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5c6e-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -49,9 +49,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.authorName
     summary: |-
-      <span data-ttu-id="a49cb-105">对于集合中的每个项目: 获取注释的作者姓名。</span><span class="sxs-lookup"><span data-stu-id="a49cb-105">For EACH ITEM in the collection: Get author name of the comment.</span></span>
+      <span data-ttu-id="e5c6e-105">对于集合中的每一项: 获取批注作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-105">For EACH ITEM in the collection: Gets the name of the comment's author.</span></span>
 
-      <span data-ttu-id="a49cb-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a49cb-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5c6e-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5c6e-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorName
     fullName: authorName
@@ -65,9 +65,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.content
     summary: |-
-      <span data-ttu-id="a49cb-107">对于集合中的每一项: 获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="a49cb-107">For EACH ITEM in the collection: Get or set the content.</span></span>
+      <span data-ttu-id="e5c6e-107">对于集合中的每一项: 获取或设置批注的内容。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-107">For EACH ITEM in the collection: Gets or sets the comment's content.</span></span> <span data-ttu-id="e5c6e-108">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-108">The string is plain text.</span></span>
 
-      <span data-ttu-id="a49cb-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a49cb-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5c6e-109">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5c6e-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
@@ -81,9 +81,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.creationDate
     summary: |-
-      <span data-ttu-id="a49cb-109">对于集合中的每个项目: 获取注释的创建时间。</span><span class="sxs-lookup"><span data-stu-id="a49cb-109">For EACH ITEM in the collection: Get creation time of the comment.</span></span> <span data-ttu-id="a49cb-110">如果批注是从注释转换而来的，则返回 null，因为在这种情况下，批注没有创建日期。</span><span class="sxs-lookup"><span data-stu-id="a49cb-110">Will return null if the comment is converted from note, as in this case, the comment will not has created date.</span></span>
+      <span data-ttu-id="e5c6e-110">对于集合中的每一项: 获取注释的创建时间。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-110">For EACH ITEM in the collection: Gets the creation time of the comment.</span></span> <span data-ttu-id="e5c6e-111">如果批注是从备注转换而来的，则返回 null，因为批注没有创建日期。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-111">Returns null if the comment was converted from a note, since the comment does not have a creation date.</span></span>
 
-      <span data-ttu-id="a49cb-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a49cb-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5c6e-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5c6e-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -97,9 +97,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentCollectionLoadOptions.id
     summary: |-
-      <span data-ttu-id="a49cb-112">对于集合中的每一项: 代表注释标识符。</span><span class="sxs-lookup"><span data-stu-id="a49cb-112">For EACH ITEM in the collection: Represents the comment identifier.</span></span> <span data-ttu-id="a49cb-113">只读。</span><span class="sxs-lookup"><span data-stu-id="a49cb-113">Read-only.</span></span>
+      <span data-ttu-id="e5c6e-113">对于集合中的每一项: 代表注释标识符。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-113">For EACH ITEM in the collection: Represents the comment identifier.</span></span> <span data-ttu-id="e5c6e-114">只读。</span><span class="sxs-lookup"><span data-stu-id="e5c6e-114">Read-only.</span></span>
 
-      <span data-ttu-id="a49cb-114">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a49cb-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5c6e-115">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5c6e-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: id
     fullName: id
