--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.CommentData
-    summary: <span data-ttu-id="59659-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="59659-101">An interface describing the data returned by calling "comment.toJSON()".</span></span>
+    summary: <span data-ttu-id="19668-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="19668-101">An interface describing the data returned by calling "comment.toJSON()".</span></span>
     name: Excel.Interfaces.CommentData
     fullName: Excel.Interfaces.CommentData
     langs:
@@ -17,9 +17,9 @@ items:
       - excel.Excel.Interfaces.CommentData.replies
   - uid: excel.Excel.Interfaces.CommentData.authorEmail
     summary: |-
-      <span data-ttu-id="59659-102">获取批注作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="59659-102">Get author email of the comment.</span></span>
+      <span data-ttu-id="19668-102">获取批注作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="19668-102">Gets the email of the comment's author.</span></span>
 
-      <span data-ttu-id="59659-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59659-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="19668-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19668-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -33,9 +33,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentData.authorName
     summary: |-
-      <span data-ttu-id="59659-104">获取批注作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="59659-104">Get author name of the comment.</span></span>
+      <span data-ttu-id="19668-104">获取批注作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="19668-104">Gets the name of the comment's author.</span></span>
 
-      <span data-ttu-id="59659-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59659-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="19668-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19668-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorName
     fullName: authorName
@@ -49,9 +49,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentData.content
     summary: |-
-      <span data-ttu-id="59659-106">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="59659-106">Get or set the content.</span></span>
+      <span data-ttu-id="19668-106">获取或设置批注的内容。</span><span class="sxs-lookup"><span data-stu-id="19668-106">Gets or sets the comment's content.</span></span> <span data-ttu-id="19668-107">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="19668-107">The string is plain text.</span></span>
 
-      <span data-ttu-id="59659-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59659-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="19668-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19668-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
@@ -65,9 +65,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentData.creationDate
     summary: |-
-      <span data-ttu-id="59659-108">获取批注的创建时间。</span><span class="sxs-lookup"><span data-stu-id="59659-108">Get creation time of the comment.</span></span> <span data-ttu-id="59659-109">如果批注是从注释转换而来的，则返回 null，因为在这种情况下，批注没有创建日期。</span><span class="sxs-lookup"><span data-stu-id="59659-109">Will return null if the comment is converted from note, as in this case, the comment will not has created date.</span></span>
+      <span data-ttu-id="19668-109">获取批注的创建时间。</span><span class="sxs-lookup"><span data-stu-id="19668-109">Gets the creation time of the comment.</span></span> <span data-ttu-id="19668-110">如果批注是从备注转换而来的，则返回 null，因为批注没有创建日期。</span><span class="sxs-lookup"><span data-stu-id="19668-110">Returns null if the comment was converted from a note, since the comment does not have a creation date.</span></span>
 
-      <span data-ttu-id="59659-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59659-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="19668-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19668-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -81,9 +81,9 @@ items:
           - Date
   - uid: excel.Excel.Interfaces.CommentData.id
     summary: |-
-      <span data-ttu-id="59659-111">表示批注标识符。</span><span class="sxs-lookup"><span data-stu-id="59659-111">Represents the comment identifier.</span></span> <span data-ttu-id="59659-112">只读。</span><span class="sxs-lookup"><span data-stu-id="59659-112">Read-only.</span></span>
+      <span data-ttu-id="19668-112">表示批注标识符。</span><span class="sxs-lookup"><span data-stu-id="19668-112">Represents the comment identifier.</span></span> <span data-ttu-id="19668-113">只读。</span><span class="sxs-lookup"><span data-stu-id="19668-113">Read-only.</span></span>
 
-      <span data-ttu-id="59659-113">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59659-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="19668-114">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19668-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: id
     fullName: id
@@ -97,9 +97,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentData.replies
     summary: |-
-      <span data-ttu-id="59659-114">表示与批注关联的回复对象的集合。</span><span class="sxs-lookup"><span data-stu-id="59659-114">Represents a collection of reply objects associated with the comment.</span></span> <span data-ttu-id="59659-115">只读。</span><span class="sxs-lookup"><span data-stu-id="59659-115">Read-only.</span></span>
+      <span data-ttu-id="19668-115">表示与批注关联的回复对象的集合。</span><span class="sxs-lookup"><span data-stu-id="19668-115">Represents a collection of reply objects associated with the comment.</span></span> <span data-ttu-id="19668-116">只读。</span><span class="sxs-lookup"><span data-stu-id="19668-116">Read-only.</span></span>
 
-      <span data-ttu-id="59659-116">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59659-116">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="19668-117">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19668-117">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: replies
     fullName: replies
