--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.CommentLoadOptions
     summary: |-
-      <span data-ttu-id="5efac-101">表示工作簿中的单元格注释对象。</span><span class="sxs-lookup"><span data-stu-id="5efac-101">Represents a cell comment object in the workbook.</span></span>
+      <span data-ttu-id="e434e-101">表示工作簿中的单元格注释对象。</span><span class="sxs-lookup"><span data-stu-id="e434e-101">Represents a cell comment object in the workbook.</span></span>
 
-      <span data-ttu-id="5efac-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5efac-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e434e-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e434e-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.CommentLoadOptions
     fullName: Excel.Interfaces.CommentLoadOptions
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentLoadOptions.authorEmail
     summary: |-
-      <span data-ttu-id="5efac-103">获取批注作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="5efac-103">Get author email of the comment.</span></span>
+      <span data-ttu-id="e434e-103">获取批注作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="e434e-103">Gets the email of the comment's author.</span></span>
 
-      <span data-ttu-id="5efac-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5efac-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e434e-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e434e-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -49,9 +49,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentLoadOptions.authorName
     summary: |-
-      <span data-ttu-id="5efac-105">获取批注作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="5efac-105">Get author name of the comment.</span></span>
+      <span data-ttu-id="e434e-105">获取批注作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="e434e-105">Gets the name of the comment's author.</span></span>
 
-      <span data-ttu-id="5efac-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5efac-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e434e-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e434e-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorName
     fullName: authorName
@@ -65,9 +65,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentLoadOptions.content
     summary: |-
-      <span data-ttu-id="5efac-107">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="5efac-107">Get or set the content.</span></span>
+      <span data-ttu-id="e434e-107">获取或设置批注的内容。</span><span class="sxs-lookup"><span data-stu-id="e434e-107">Gets or sets the comment's content.</span></span> <span data-ttu-id="e434e-108">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="e434e-108">The string is plain text.</span></span>
 
-      <span data-ttu-id="5efac-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5efac-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e434e-109">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e434e-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
@@ -81,9 +81,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentLoadOptions.creationDate
     summary: |-
-      <span data-ttu-id="5efac-109">获取批注的创建时间。</span><span class="sxs-lookup"><span data-stu-id="5efac-109">Get creation time of the comment.</span></span> <span data-ttu-id="5efac-110">如果批注是从注释转换而来的，则返回 null，因为在这种情况下，批注没有创建日期。</span><span class="sxs-lookup"><span data-stu-id="5efac-110">Will return null if the comment is converted from note, as in this case, the comment will not has created date.</span></span>
+      <span data-ttu-id="e434e-110">获取批注的创建时间。</span><span class="sxs-lookup"><span data-stu-id="e434e-110">Gets the creation time of the comment.</span></span> <span data-ttu-id="e434e-111">如果批注是从备注转换而来的，则返回 null，因为批注没有创建日期。</span><span class="sxs-lookup"><span data-stu-id="e434e-111">Returns null if the comment was converted from a note, since the comment does not have a creation date.</span></span>
 
-      <span data-ttu-id="5efac-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5efac-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e434e-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e434e-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -97,9 +97,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.CommentLoadOptions.id
     summary: |-
-      <span data-ttu-id="5efac-112">表示批注标识符。</span><span class="sxs-lookup"><span data-stu-id="5efac-112">Represents the comment identifier.</span></span> <span data-ttu-id="5efac-113">只读。</span><span class="sxs-lookup"><span data-stu-id="5efac-113">Read-only.</span></span>
+      <span data-ttu-id="e434e-113">表示批注标识符。</span><span class="sxs-lookup"><span data-stu-id="e434e-113">Represents the comment identifier.</span></span> <span data-ttu-id="e434e-114">只读。</span><span class="sxs-lookup"><span data-stu-id="e434e-114">Read-only.</span></span>
 
-      <span data-ttu-id="5efac-114">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5efac-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e434e-115">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e434e-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: id
     fullName: id
