--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplydata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.CommentReplyData
-    summary: <span data-ttu-id="3e33f-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3e33f-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
+    summary: <span data-ttu-id="0f7e6-101">描述通过调用 "commentReply ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-101">An interface describing the data returned by calling "commentReply.toJSON()".</span></span>
     name: Excel.Interfaces.CommentReplyData
     fullName: Excel.Interfaces.CommentReplyData
     langs:
@@ -16,9 +16,9 @@ items:
       - excel.Excel.Interfaces.CommentReplyData.id
   - uid: excel.Excel.Interfaces.CommentReplyData.authorEmail
     summary: |-
-      <span data-ttu-id="3e33f-102">获取批注回复作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="3e33f-102">Get author email of the comment reply.</span></span>
+      <span data-ttu-id="0f7e6-102">获取批注回复作者的电子邮件。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-102">Gets the email of the comment reply's author.</span></span>
 
-      <span data-ttu-id="3e33f-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e33f-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f7e6-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f7e6-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorEmail
     fullName: authorEmail
@@ -32,9 +32,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentReplyData.authorName
     summary: |-
-      <span data-ttu-id="3e33f-104">获取批注回复作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="3e33f-104">Get author name of the comment reply.</span></span>
+      <span data-ttu-id="0f7e6-104">获取批注回复作者的姓名。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-104">Gets the name of the comment reply's author.</span></span>
 
-      <span data-ttu-id="3e33f-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e33f-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f7e6-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f7e6-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: authorName
     fullName: authorName
@@ -48,9 +48,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentReplyData.content
     summary: |-
-      <span data-ttu-id="3e33f-106">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="3e33f-106">Get or set the content.</span></span>
+      <span data-ttu-id="0f7e6-106">获取或设置批注回复的内容。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-106">Gets or sets the comment reply's content.</span></span> <span data-ttu-id="0f7e6-107">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-107">The string is plain text.</span></span>
 
-      <span data-ttu-id="3e33f-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e33f-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f7e6-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f7e6-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
@@ -64,9 +64,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.CommentReplyData.creationDate
     summary: |-
-      <span data-ttu-id="3e33f-108">获取批注回复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="3e33f-108">Get creation time of the comment reply.</span></span>
+      <span data-ttu-id="0f7e6-109">获取批注回复的创建时间。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-109">Gets the creation time of the comment reply.</span></span>
 
-      <span data-ttu-id="3e33f-109">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e33f-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f7e6-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f7e6-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: creationDate
     fullName: creationDate
@@ -80,9 +80,9 @@ items:
           - Date
   - uid: excel.Excel.Interfaces.CommentReplyData.id
     summary: |-
-      <span data-ttu-id="3e33f-110">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="3e33f-110">Represents the comment reply identifier.</span></span> <span data-ttu-id="3e33f-111">只读。</span><span class="sxs-lookup"><span data-stu-id="3e33f-111">Read-only.</span></span>
+      <span data-ttu-id="0f7e6-111">表示批注回复标识符。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-111">Represents the comment reply identifier.</span></span> <span data-ttu-id="0f7e6-112">只读。</span><span class="sxs-lookup"><span data-stu-id="0f7e6-112">Read-only.</span></span>
 
-      <span data-ttu-id="3e33f-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e33f-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f7e6-113">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f7e6-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: id
     fullName: id
