--- a/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.commentreplyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.CommentReplyUpdateData
-    summary: '<span data-ttu-id="5975e-101">一个用于更新 CommentReply 对象上的数据的接口, 可用于 "CommentReply (</span><span class="sxs-lookup"><span data-stu-id="5975e-101">An interface for updating data on the CommentReply object, for use in "commentReply.set(</span></span><!-- --><span data-ttu-id="5975e-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="5975e-102"></span></span><!-- --><span data-ttu-id="5975e-103">)".</span><span class="sxs-lookup"><span data-stu-id="5975e-103"></span></span>'
+    summary: '<span data-ttu-id="e5ddb-101">一个用于更新 CommentReply 对象上的数据的接口, 可用于 "commentReply (</span><span class="sxs-lookup"><span data-stu-id="e5ddb-101">An interface for updating data on the CommentReply object, for use in "commentReply.set(</span></span><!-- --><span data-ttu-id="e5ddb-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="e5ddb-102"></span></span><!-- --><span data-ttu-id="e5ddb-103">)".</span><span class="sxs-lookup"><span data-stu-id="e5ddb-103"></span></span>'
     name: Excel.Interfaces.CommentReplyUpdateData
     fullName: Excel.Interfaces.CommentReplyUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - excel.Excel.Interfaces.CommentReplyUpdateData.content
   - uid: excel.Excel.Interfaces.CommentReplyUpdateData.content
     summary: |-
-      <span data-ttu-id="5975e-104">获取或设置内容。</span><span class="sxs-lookup"><span data-stu-id="5975e-104">Get or set the content.</span></span>
+      <span data-ttu-id="e5ddb-104">获取或设置批注回复的内容。</span><span class="sxs-lookup"><span data-stu-id="e5ddb-104">Gets or sets the comment reply's content.</span></span> <span data-ttu-id="e5ddb-105">字符串为纯文本。</span><span class="sxs-lookup"><span data-stu-id="e5ddb-105">The string is plain text.</span></span>
 
-      <span data-ttu-id="5975e-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5975e-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5ddb-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5ddb-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: content
     fullName: content
