--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions
     summary: |-
-      <span data-ttu-id="3aad7-101">表示切片器上所有切片器项目对象的集合。</span><span class="sxs-lookup"><span data-stu-id="3aad7-101">Represents a collection of all the slicer item objects on the slicer.</span></span>
+      <span data-ttu-id="93826-101">表示切片器上所有切片器项目对象的集合。</span><span class="sxs-lookup"><span data-stu-id="93826-101">Represents a collection of all the slicer item objects on the slicer.</span></span>
 
-      <span data-ttu-id="3aad7-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3aad7-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93826-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93826-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.SlicerItemCollectionLoadOptions
     fullName: Excel.Interfaces.SlicerItemCollectionLoadOptions
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.hasData
     summary: |-
-      <span data-ttu-id="3aad7-103">对于集合中的每一项: 如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="3aad7-103">For EACH ITEM in the collection: True if the slicer item has data.</span></span>
+      <span data-ttu-id="93826-103">对于集合中的每一项: 如果切片器项包含数据, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="93826-103">For EACH ITEM in the collection: True if the slicer item has data.</span></span>
 
-      <span data-ttu-id="3aad7-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3aad7-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93826-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93826-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: hasData
     fullName: hasData
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.isSelected
     summary: |-
-      <span data-ttu-id="3aad7-105">对于集合中的每一项: 如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="3aad7-105">For EACH ITEM in the collection: True if the slicer item is selected.</span></span> <span data-ttu-id="3aad7-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="3aad7-106">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="3aad7-107">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="3aad7-107">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
+      <span data-ttu-id="93826-105">对于集合中的每一项: 如果选择了切片器项, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="93826-105">For EACH ITEM in the collection: True if the slicer item is selected.</span></span> <span data-ttu-id="93826-106">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="93826-106">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="93826-107">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="93826-107">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
-      <span data-ttu-id="3aad7-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3aad7-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93826-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93826-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: isSelected
     fullName: isSelected
@@ -64,9 +64,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.key
     summary: |-
-      <span data-ttu-id="3aad7-109">对于集合中的每一项: 表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="3aad7-109">For EACH ITEM in the collection: Represents the unique value representing the slicer item.</span></span>
+      <span data-ttu-id="93826-109">对于集合中的每一项: 表示切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="93826-109">For EACH ITEM in the collection: Represents the unique value representing the slicer item.</span></span>
 
-      <span data-ttu-id="3aad7-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3aad7-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93826-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93826-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: key
     fullName: key
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.name
     summary: |-
-      <span data-ttu-id="3aad7-111">对于集合中的每一项: 表示显示在 UI 上的值。</span><span class="sxs-lookup"><span data-stu-id="3aad7-111">For EACH ITEM in the collection: Represents the value displayed on UI.</span></span>
+      <span data-ttu-id="93826-111">对于集合中的每一项: 代表 UI 中显示的标题。</span><span class="sxs-lookup"><span data-stu-id="93826-111">For EACH ITEM in the collection: Represents the title displayed in the UI.</span></span>
 
-      <span data-ttu-id="3aad7-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3aad7-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="93826-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="93826-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
