--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.SlicerItemData
-    summary: <span data-ttu-id="9a51a-101">描述通过调用 "slicerItem ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9a51a-101">An interface describing the data returned by calling "slicerItem.toJSON()".</span></span>
+    summary: <span data-ttu-id="f9d93-101">描述通过调用 "slicerItem ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f9d93-101">An interface describing the data returned by calling "slicerItem.toJSON()".</span></span>
     name: Excel.Interfaces.SlicerItemData
     fullName: Excel.Interfaces.SlicerItemData
     langs:
@@ -15,9 +15,9 @@ items:
       - excel.Excel.Interfaces.SlicerItemData.name
   - uid: excel.Excel.Interfaces.SlicerItemData.hasData
     summary: |-
-      <span data-ttu-id="9a51a-102">如果切片器项包含数据，则为 True。</span><span class="sxs-lookup"><span data-stu-id="9a51a-102">True if the slicer item has data.</span></span>
+      <span data-ttu-id="f9d93-102">如果切片器项包含数据，则为 True。</span><span class="sxs-lookup"><span data-stu-id="f9d93-102">True if the slicer item has data.</span></span>
 
-      <span data-ttu-id="9a51a-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a51a-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f9d93-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9d93-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: hasData
     fullName: hasData
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemData.isSelected
     summary: |-
-      <span data-ttu-id="9a51a-104">如果选择了切片器项，则为 True。</span><span class="sxs-lookup"><span data-stu-id="9a51a-104">True if the slicer item is selected.</span></span> <span data-ttu-id="9a51a-105">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="9a51a-105">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="9a51a-106">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="9a51a-106">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
+      <span data-ttu-id="f9d93-104">如果选择了切片器项，则为 True。</span><span class="sxs-lookup"><span data-stu-id="f9d93-104">True if the slicer item is selected.</span></span> <span data-ttu-id="f9d93-105">设置此值不会清除其他 SlicerItems 的选定状态。</span><span class="sxs-lookup"><span data-stu-id="f9d93-105">Setting this value will not clear other SlicerItems' selected state.</span></span> <span data-ttu-id="f9d93-106">默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。</span><span class="sxs-lookup"><span data-stu-id="f9d93-106">By default, if the slicer item is the only one selected, when it is deselected, all items will be selected.</span></span>
 
-      <span data-ttu-id="9a51a-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a51a-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f9d93-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9d93-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: isSelected
     fullName: isSelected
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerItemData.key
     summary: |-
-      <span data-ttu-id="9a51a-108">表示代表切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="9a51a-108">Represents the unique value representing the slicer item.</span></span>
+      <span data-ttu-id="f9d93-108">表示代表切片器项的唯一值。</span><span class="sxs-lookup"><span data-stu-id="f9d93-108">Represents the unique value representing the slicer item.</span></span>
 
-      <span data-ttu-id="9a51a-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a51a-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f9d93-109">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9d93-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: key
     fullName: key
@@ -63,9 +63,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerItemData.name
     summary: |-
-      <span data-ttu-id="9a51a-110">表示 UI 上显示的值。</span><span class="sxs-lookup"><span data-stu-id="9a51a-110">Represents the value displayed on UI.</span></span>
+      <span data-ttu-id="f9d93-110">代表 UI 中显示的标题。</span><span class="sxs-lookup"><span data-stu-id="f9d93-110">Represents the title displayed in the UI.</span></span>
 
-      <span data-ttu-id="9a51a-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a51a-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f9d93-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9d93-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
