--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.SlicerUpdateData
-    summary: '<span data-ttu-id="5c6d2-101">一个用于更新切片器对象上的数据的接口, 可用于 "切片器"。 set (</span><span class="sxs-lookup"><span data-stu-id="5c6d2-101">An interface for updating data on the Slicer object, for use in "slicer.set(</span></span><!-- --><span data-ttu-id="5c6d2-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="5c6d2-102"></span></span><!-- --><span data-ttu-id="5c6d2-103">)".</span><span class="sxs-lookup"><span data-stu-id="5c6d2-103"></span></span>'
+    summary: '<span data-ttu-id="8520d-101">一个用于更新切片器对象上的数据的接口, 可用于 "切片器"。 set (</span><span class="sxs-lookup"><span data-stu-id="8520d-101">An interface for updating data on the Slicer object, for use in "slicer.set(</span></span><!-- --><span data-ttu-id="8520d-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="8520d-102"></span></span><!-- --><span data-ttu-id="8520d-103">)".</span><span class="sxs-lookup"><span data-stu-id="8520d-103"></span></span>'
     name: Excel.Interfaces.SlicerUpdateData
     fullName: Excel.Interfaces.SlicerUpdateData
     langs:
@@ -21,9 +21,9 @@ items:
       - excel.Excel.Interfaces.SlicerUpdateData.worksheet
   - uid: excel.Excel.Interfaces.SlicerUpdateData.caption
     summary: |-
-      <span data-ttu-id="5c6d2-104">表示切片器的标题。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-104">Represents the caption of slicer.</span></span>
+      <span data-ttu-id="8520d-104">表示切片器的标题。</span><span class="sxs-lookup"><span data-stu-id="8520d-104">Represents the caption of slicer.</span></span>
 
-      <span data-ttu-id="5c6d2-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-105">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: caption
     fullName: caption
@@ -37,9 +37,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerUpdateData.height
     summary: |-
-      <span data-ttu-id="5c6d2-106">表示切片器的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-106">Represents the height, in points, of the slicer.</span></span> <span data-ttu-id="5c6d2-107">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-107">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
+      <span data-ttu-id="8520d-106">表示切片器的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="8520d-106">Represents the height, in points, of the slicer.</span></span> <span data-ttu-id="8520d-107">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="8520d-107">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
 
-      <span data-ttu-id="5c6d2-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: height
     fullName: height
@@ -53,9 +53,9 @@ items:
           - number
   - uid: excel.Excel.Interfaces.SlicerUpdateData.left
     summary: |-
-      <span data-ttu-id="5c6d2-109">表示从切片器左侧到工作表左侧的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-109">Represents the distance, in points, from the left side of the slicer to the left of the worksheet.</span></span> <span data-ttu-id="5c6d2-110">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-110">Throws an invalid argument exception when set with negative value as input.</span></span>
+      <span data-ttu-id="8520d-109">表示从切片器左侧到工作表左侧的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="8520d-109">Represents the distance, in points, from the left side of the slicer to the left of the worksheet.</span></span> <span data-ttu-id="8520d-110">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="8520d-110">Throws an invalid argument exception when set with negative value as input.</span></span>
 
-      <span data-ttu-id="5c6d2-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-111">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: left
     fullName: left
@@ -69,9 +69,9 @@ items:
           - number
   - uid: excel.Excel.Interfaces.SlicerUpdateData.name
     summary: |-
-      <span data-ttu-id="5c6d2-112">表示切片器的名称。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-112">Represents the name of slicer.</span></span>
+      <span data-ttu-id="8520d-112">表示切片器的名称。</span><span class="sxs-lookup"><span data-stu-id="8520d-112">Represents the name of slicer.</span></span>
 
-      <span data-ttu-id="5c6d2-113">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-113">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -85,9 +85,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerUpdateData.nameInFormula
     summary: |-
-      <span data-ttu-id="5c6d2-114">表示公式中使用的名称。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-114">Represents the name used in the formula.</span></span>
+      <span data-ttu-id="8520d-114">表示公式中使用切片器名称。</span><span class="sxs-lookup"><span data-stu-id="8520d-114">Represents the slicer name used in the formula.</span></span>
 
-      <span data-ttu-id="5c6d2-115">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-115">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-115">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: nameInFormula
     fullName: nameInFormula
@@ -101,9 +101,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerUpdateData.sortBy
     summary: |-
-      <span data-ttu-id="5c6d2-116">表示切片器中的项目的排序顺序。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-116">Represents the sort order of the items in the slicer.</span></span> <span data-ttu-id="5c6d2-117">可能的值为：DataSourceOrder、Ascending、Descending。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-117">Possible values are: DataSourceOrder, Ascending, Descending.</span></span>
+      <span data-ttu-id="8520d-116">表示切片器中的项目的排序顺序。</span><span class="sxs-lookup"><span data-stu-id="8520d-116">Represents the sort order of the items in the slicer.</span></span> <span data-ttu-id="8520d-117">可能的值为：DataSourceOrder、Ascending、Descending。</span><span class="sxs-lookup"><span data-stu-id="8520d-117">Possible values are: DataSourceOrder, Ascending, Descending.</span></span>
 
-      <span data-ttu-id="5c6d2-118">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-118">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-118">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-118">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: sortBy
     fullName: sortBy
@@ -117,9 +117,9 @@ items:
           - Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
   - uid: excel.Excel.Interfaces.SlicerUpdateData.style
     summary: |-
-      <span data-ttu-id="5c6d2-119">表示切片器样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-119">Constant value that represents the Slicer style.</span></span> <span data-ttu-id="5c6d2-120">可能的值为：SlicerStyleLight1 through SlicerStyleLight6、TableStyleOther1 through TableStyleOther2、 SlicerStyleDark1 through SlicerStyleDark6。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-120">Possible values are: SlicerStyleLight1 through SlicerStyleLight6, TableStyleOther1 through TableStyleOther2, SlicerStyleDark1 through SlicerStyleDark6.</span></span> <span data-ttu-id="5c6d2-121">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-121">A custom user-defined style present in the workbook can also be specified.</span></span>
+      <span data-ttu-id="8520d-119">表示切片器样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="8520d-119">Constant value that represents the Slicer style.</span></span> <span data-ttu-id="8520d-120">可能的值为: "SlicerStyleLight1" 到 "SlicerStyleLight6"、"TableStyleOther1" 通过 "TableStyleOther2"、"SlicerStyleDark1" 到 "SlicerStyleDark6"。</span><span class="sxs-lookup"><span data-stu-id="8520d-120">Possible values are: "SlicerStyleLight1" through "SlicerStyleLight6", "TableStyleOther1" through "TableStyleOther2", "SlicerStyleDark1" through "SlicerStyleDark6".</span></span> <span data-ttu-id="8520d-121">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="8520d-121">A custom user-defined style present in the workbook can also be specified.</span></span>
 
-      <span data-ttu-id="5c6d2-122">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-122">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: style
     fullName: style
@@ -133,9 +133,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.SlicerUpdateData.top
     summary: |-
-      <span data-ttu-id="5c6d2-123">表示从切片器上边缘到工作表顶部的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-123">Represents the distance, in points, from the top edge of the slicer to the top of the worksheet.</span></span> <span data-ttu-id="5c6d2-124">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-124">Throws an invalid argument exception when set with negative value as input.</span></span>
+      <span data-ttu-id="8520d-123">表示从切片器上边缘到工作表顶部的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="8520d-123">Represents the distance, in points, from the top edge of the slicer to the top of the worksheet.</span></span> <span data-ttu-id="8520d-124">当设置为负值作为输入时引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="8520d-124">Throws an invalid argument exception when set with negative value as input.</span></span>
 
-      <span data-ttu-id="5c6d2-125">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-125">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-125">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-125">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: top
     fullName: top
@@ -149,9 +149,9 @@ items:
           - number
   - uid: excel.Excel.Interfaces.SlicerUpdateData.width
     summary: |-
-      <span data-ttu-id="5c6d2-126">表示切片器的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-126">Represents the width, in points, of the slicer.</span></span> <span data-ttu-id="5c6d2-127">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-127">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
+      <span data-ttu-id="8520d-126">表示切片器的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="8520d-126">Represents the width, in points, of the slicer.</span></span> <span data-ttu-id="8520d-127">当设置为负值或零作为输入时, 将引发无效参数异常。</span><span class="sxs-lookup"><span data-stu-id="8520d-127">Throws an invalid argument exception when set with negative value or zero as input.</span></span>
 
-      <span data-ttu-id="5c6d2-128">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-128">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-128">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-128">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: width
     fullName: width
@@ -165,9 +165,9 @@ items:
           - number
   - uid: excel.Excel.Interfaces.SlicerUpdateData.worksheet
     summary: |-
-      <span data-ttu-id="5c6d2-129">表示包含切片器的工作表。</span><span class="sxs-lookup"><span data-stu-id="5c6d2-129">Represents the worksheet containing the slicer.</span></span>
+      <span data-ttu-id="8520d-129">表示包含切片器的工作表。</span><span class="sxs-lookup"><span data-stu-id="8520d-129">Represents the worksheet containing the slicer.</span></span>
 
-      <span data-ttu-id="5c6d2-130">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c6d2-130">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8520d-130">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8520d-130">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: worksheet
     fullName: worksheet
