--- a/docs/docs-ref-autogen/excel_release/excel.cellpropertiesfillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.cellpropertiesfillloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.CellPropertiesFillLoadOptions
     summary: |-
-      <span data-ttu-id="5afb9-101">指定要在`format.fill`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="5afb9-101">Specifies which properties to load on the `format.fill` object.</span></span>
+      <span data-ttu-id="efd0a-101">指定要在`format.fill`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="efd0a-101">Specifies which properties to load on the `format.fill` object.</span></span>
 
-      <span data-ttu-id="5afb9-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb9-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="efd0a-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efd0a-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFillLoadOptions
     fullName: Excel.CellPropertiesFillLoadOptions
     langs:
@@ -19,9 +19,9 @@ items:
       - excel_release.Excel.CellPropertiesFillLoadOptions.tintAndShade
   - uid: excel_release.Excel.CellPropertiesFillLoadOptions.color
     summary: |-
-      <span data-ttu-id="5afb9-103">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="5afb9-103">Specifies whether to load on the `color` property.</span></span>
+      <span data-ttu-id="efd0a-103">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="efd0a-103">Specifies whether to load on the `color` property.</span></span>
 
-      <span data-ttu-id="5afb9-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb9-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="efd0a-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efd0a-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -32,11 +32,41 @@ items:
       return:
         type:
           - boolean
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="efd0a-105">示例</span><span class="sxs-lookup"><span data-stu-id="efd0a-105">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const cell = context.workbook.getActiveCell();
+
+              // Define the cell properties to get by setting the matching LoadOptions to true.
+              const propertiesToGet = cell.getCellProperties({
+                  address: true,
+                  format: {
+                      fill: {
+                          color: true
+                      },
+                      font: {
+                          color: true
+                      }
+                  },
+                  style: true
+              });
+
+              // Sync to get the data from the workbook.
+              await context.sync();
+              const cellProperties = propertiesToGet.value[0][0];
+              console.log(
+                  `Address: ${cellProperties.address}\nStyle: ${cellProperties.style}\nFill Color: ${cellProperties.format.fill.color}\nFont Color: ${cellProperties.format.font.color}`);
+          });
+          ```
   - uid: excel_release.Excel.CellPropertiesFillLoadOptions.pattern
     summary: |-
-      <span data-ttu-id="5afb9-105">指定是否在`pattern`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="5afb9-105">Specifies whether to load on the `pattern` property.</span></span>
+      <span data-ttu-id="efd0a-106">指定是否在`pattern`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="efd0a-106">Specifies whether to load on the `pattern` property.</span></span>
 
-      <span data-ttu-id="5afb9-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb9-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="efd0a-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efd0a-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: pattern
     fullName: pattern
     langs:
@@ -49,9 +79,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFillLoadOptions.patternColor
     summary: |-
-      <span data-ttu-id="5afb9-107">指定是否在`patternColor`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="5afb9-107">Specifies whether to load on the `patternColor` property.</span></span>
+      <span data-ttu-id="efd0a-108">指定是否在`patternColor`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="efd0a-108">Specifies whether to load on the `patternColor` property.</span></span>
 
-      <span data-ttu-id="5afb9-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb9-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="efd0a-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efd0a-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternColor
     fullName: patternColor
     langs:
@@ -64,9 +94,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFillLoadOptions.patternTintAndShade
     summary: |-
-      <span data-ttu-id="5afb9-109">指定是否在`patternTintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="5afb9-109">Specifies whether to load on the `patternTintAndShade` property.</span></span>
+      <span data-ttu-id="efd0a-110">指定是否在`patternTintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="efd0a-110">Specifies whether to load on the `patternTintAndShade` property.</span></span>
 
-      <span data-ttu-id="5afb9-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb9-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="efd0a-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efd0a-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -79,9 +109,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFillLoadOptions.tintAndShade
     summary: |-
-      <span data-ttu-id="5afb9-111">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="5afb9-111">Specifies whether to load on the `tintAndShade` property.</span></span>
+      <span data-ttu-id="efd0a-112">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="efd0a-112">Specifies whether to load on the `tintAndShade` property.</span></span>
 
-      <span data-ttu-id="5afb9-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5afb9-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="efd0a-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="efd0a-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
