--- a/docs/docs-ref-autogen/excel_release/excel.cellpropertiesfontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.cellpropertiesfontloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions
     summary: |-
-      <span data-ttu-id="1417d-101">指定要在`format.font`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="1417d-101">Specifies which properties to load on the `format.font` object.</span></span>
+      <span data-ttu-id="8f5b8-101">指定要在`format.font`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-101">Specifies which properties to load on the `format.font` object.</span></span>
 
-      <span data-ttu-id="1417d-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFontLoadOptions
     fullName: Excel.CellPropertiesFontLoadOptions
     langs:
@@ -24,9 +24,9 @@ items:
       - excel_release.Excel.CellPropertiesFontLoadOptions.underline
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.bold
     summary: |-
-      <span data-ttu-id="1417d-103">指定是否在`bold`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-103">Specifies whether to load on the `bold` property.</span></span>
+      <span data-ttu-id="8f5b8-103">指定是否在`bold`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-103">Specifies whether to load on the `bold` property.</span></span>
 
-      <span data-ttu-id="1417d-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bold
     fullName: bold
     langs:
@@ -39,9 +39,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.color
     summary: |-
-      <span data-ttu-id="1417d-105">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-105">Specifies whether to load on the `color` property.</span></span>
+      <span data-ttu-id="8f5b8-105">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-105">Specifies whether to load on the `color` property.</span></span>
 
-      <span data-ttu-id="1417d-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -52,11 +52,41 @@ items:
       return:
         type:
           - boolean
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="8f5b8-107">示例</span><span class="sxs-lookup"><span data-stu-id="8f5b8-107">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const cell = context.workbook.getActiveCell();
+
+              // Define the cell properties to get by setting the matching LoadOptions to true.
+              const propertiesToGet = cell.getCellProperties({
+                  address: true,
+                  format: {
+                      fill: {
+                          color: true
+                      },
+                      font: {
+                          color: true
+                      }
+                  },
+                  style: true
+              });
+
+              // Sync to get the data from the workbook.
+              await context.sync();
+              const cellProperties = propertiesToGet.value[0][0];
+              console.log(
+                  `Address: ${cellProperties.address}\nStyle: ${cellProperties.style}\nFill Color: ${cellProperties.format.fill.color}\nFont Color: ${cellProperties.format.font.color}`);
+          });
+          ```
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.italic
     summary: |-
-      <span data-ttu-id="1417d-107">指定是否在`italic`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-107">Specifies whether to load on the `italic` property.</span></span>
+      <span data-ttu-id="8f5b8-108">指定是否在`italic`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-108">Specifies whether to load on the `italic` property.</span></span>
 
-      <span data-ttu-id="1417d-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: italic
     fullName: italic
     langs:
@@ -69,9 +99,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.name
     summary: |-
-      <span data-ttu-id="1417d-109">指定是否在`name`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-109">Specifies whether to load on the `name` property.</span></span>
+      <span data-ttu-id="8f5b8-110">指定是否在`name`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-110">Specifies whether to load on the `name` property.</span></span>
 
-      <span data-ttu-id="1417d-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -84,9 +114,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.size
     summary: |-
-      <span data-ttu-id="1417d-111">指定是否在`size`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-111">Specifies whether to load on the `size` property.</span></span>
+      <span data-ttu-id="8f5b8-112">指定是否在`size`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-112">Specifies whether to load on the `size` property.</span></span>
 
-      <span data-ttu-id="1417d-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: size
     fullName: size
     langs:
@@ -99,9 +129,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.strikethrough
     summary: |-
-      <span data-ttu-id="1417d-113">指定是否在`strikethrough`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-113">Specifies whether to load on the `strikethrough` property.</span></span>
+      <span data-ttu-id="8f5b8-114">指定是否在`strikethrough`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-114">Specifies whether to load on the `strikethrough` property.</span></span>
 
-      <span data-ttu-id="1417d-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-115">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -114,9 +144,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.subscript
     summary: |-
-      <span data-ttu-id="1417d-115">指定是否在`subscript`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-115">Specifies whether to load on the `subscript` property.</span></span>
+      <span data-ttu-id="8f5b8-116">指定是否在`subscript`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-116">Specifies whether to load on the `subscript` property.</span></span>
 
-      <span data-ttu-id="1417d-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-117">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: subscript
     fullName: subscript
     langs:
@@ -129,9 +159,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.superscript
     summary: |-
-      <span data-ttu-id="1417d-117">指定是否在`superscript`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-117">Specifies whether to load on the `superscript` property.</span></span>
+      <span data-ttu-id="8f5b8-118">指定是否在`superscript`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-118">Specifies whether to load on the `superscript` property.</span></span>
 
-      <span data-ttu-id="1417d-118">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-119">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-119">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: superscript
     fullName: superscript
     langs:
@@ -144,9 +174,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.tintAndShade
     summary: |-
-      <span data-ttu-id="1417d-119">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-119">Specifies whether to load on the `tintAndShade` property.</span></span>
+      <span data-ttu-id="8f5b8-120">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-120">Specifies whether to load on the `tintAndShade` property.</span></span>
 
-      <span data-ttu-id="1417d-120">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-121">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -159,9 +189,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesFontLoadOptions.underline
     summary: |-
-      <span data-ttu-id="1417d-121">指定是否在`underline`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="1417d-121">Specifies whether to load on the `underline` property.</span></span>
+      <span data-ttu-id="8f5b8-122">指定是否在`underline`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="8f5b8-122">Specifies whether to load on the `underline` property.</span></span>
 
-      <span data-ttu-id="1417d-122">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1417d-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8f5b8-123">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5b8-123">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: underline
     fullName: underline
     langs:
