--- a/docs/docs-ref-autogen/excel_release/excel.cellpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.cellpropertiesloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.CellPropertiesLoadOptions
     summary: |-
-      <span data-ttu-id="20fc9-101">表示在用作 "getCellProperties" 方法的一部分时要加载的单元格属性。</span><span class="sxs-lookup"><span data-stu-id="20fc9-101">Represents which cell properties to load, when used as part of a "range.getCellProperties" method.</span></span>
+      <span data-ttu-id="92473-101">表示在用作 "getCellProperties" 方法的一部分时要加载的单元格属性。</span><span class="sxs-lookup"><span data-stu-id="92473-101">Represents which cell properties to load, when used as part of a "range.getCellProperties" method.</span></span>
 
-      <span data-ttu-id="20fc9-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesLoadOptions
     fullName: Excel.CellPropertiesLoadOptions
     langs:
@@ -20,9 +20,9 @@ items:
       - excel_release.Excel.CellPropertiesLoadOptions.style
   - uid: excel_release.Excel.CellPropertiesLoadOptions.address
     summary: |-
-      <span data-ttu-id="20fc9-103">指定是否在`address`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="20fc9-103">Specifies whether to load on the `address` property.</span></span>
+      <span data-ttu-id="92473-103">指定是否在`address`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="92473-103">Specifies whether to load on the `address` property.</span></span>
 
-      <span data-ttu-id="20fc9-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: address
     fullName: address
     langs:
@@ -33,11 +33,41 @@ items:
       return:
         type:
           - boolean
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="92473-105">示例</span><span class="sxs-lookup"><span data-stu-id="92473-105">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const cell = context.workbook.getActiveCell();
+
+              // Define the cell properties to get by setting the matching LoadOptions to true.
+              const propertiesToGet = cell.getCellProperties({
+                  address: true,
+                  format: {
+                      fill: {
+                          color: true
+                      },
+                      font: {
+                          color: true
+                      }
+                  },
+                  style: true
+              });
+
+              // Sync to get the data from the workbook.
+              await context.sync();
+              const cellProperties = propertiesToGet.value[0][0];
+              console.log(
+                  `Address: ${cellProperties.address}\nStyle: ${cellProperties.style}\nFill Color: ${cellProperties.format.fill.color}\nFont Color: ${cellProperties.format.font.color}`);
+          });
+          ```
   - uid: excel_release.Excel.CellPropertiesLoadOptions.addressLocal
     summary: |-
-      <span data-ttu-id="20fc9-105">指定是否在`addressLocal`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="20fc9-105">Specifies whether to load on the `addressLocal` property.</span></span>
+      <span data-ttu-id="92473-106">指定是否在`addressLocal`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="92473-106">Specifies whether to load on the `addressLocal` property.</span></span>
 
-      <span data-ttu-id="20fc9-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: addressLocal
     fullName: addressLocal
     langs:
@@ -50,9 +80,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesLoadOptions.format
     summary: |-
-      <span data-ttu-id="20fc9-107">指定是否在`format`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="20fc9-107">Specifies whether to load on the `format` property.</span></span>
+      <span data-ttu-id="92473-108">指定是否在`format`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="92473-108">Specifies whether to load on the `format` property.</span></span>
 
-      <span data-ttu-id="20fc9-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -65,9 +95,9 @@ items:
           - excel.Excel.CellPropertiesFormatLoadOptions
   - uid: excel_release.Excel.CellPropertiesLoadOptions.hidden
     summary: |-
-      <span data-ttu-id="20fc9-109">指定是否在`hidden`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="20fc9-109">Specifies whether to load on the `hidden` property.</span></span>
+      <span data-ttu-id="92473-110">指定是否在`hidden`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="92473-110">Specifies whether to load on the `hidden` property.</span></span>
 
-      <span data-ttu-id="20fc9-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hidden
     fullName: hidden
     langs:
@@ -80,9 +110,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesLoadOptions.hyperlink
     summary: |-
-      <span data-ttu-id="20fc9-111">指定是否在`hyperlink`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="20fc9-111">Specifies whether to load on the `hyperlink` property.</span></span>
+      <span data-ttu-id="92473-112">指定是否在`hyperlink`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="92473-112">Specifies whether to load on the `hyperlink` property.</span></span>
 
-      <span data-ttu-id="20fc9-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -95,9 +125,9 @@ items:
           - boolean
   - uid: excel_release.Excel.CellPropertiesLoadOptions.style
     summary: |-
-      <span data-ttu-id="20fc9-113">指定是否在`style`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="20fc9-113">Specifies whether to load on the `style` property.</span></span>
+      <span data-ttu-id="92473-114">指定是否在`style`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="92473-114">Specifies whether to load on the `style` property.</span></span>
 
-      <span data-ttu-id="20fc9-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20fc9-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92473-115">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92473-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
