--- a/docs/docs-ref-autogen/excel_release/excel.settablecellproperties.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.settablecellproperties.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.SettableCellProperties
     summary: |-
-      <span data-ttu-id="1a4fb-101">表示 setCellProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="1a4fb-101">Represents the input parameter of setCellProperties.</span></span>
+      <span data-ttu-id="48cea-101">表示 setCellProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="48cea-101">Represents the input parameter of setCellProperties.</span></span>
 
-      <span data-ttu-id="1a4fb-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a4fb-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="48cea-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48cea-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.SettableCellProperties
     fullName: Excel.SettableCellProperties
     langs:
@@ -17,9 +17,9 @@ items:
       - excel_release.Excel.SettableCellProperties.style
   - uid: excel_release.Excel.SettableCellProperties.format
     summary: |-
-      <span data-ttu-id="1a4fb-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="1a4fb-103">Represents the `format` property.</span></span>
+      <span data-ttu-id="48cea-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="48cea-103">Represents the `format` property.</span></span>
 
-      <span data-ttu-id="1a4fb-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a4fb-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="48cea-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48cea-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -32,9 +32,9 @@ items:
           - excel.Excel.CellPropertiesFormat
   - uid: excel_release.Excel.SettableCellProperties.hyperlink
     summary: |-
-      <span data-ttu-id="1a4fb-105">表示`hyperlink`属性。</span><span class="sxs-lookup"><span data-stu-id="1a4fb-105">Represents the `hyperlink` property.</span></span>
+      <span data-ttu-id="48cea-105">表示`hyperlink`属性。</span><span class="sxs-lookup"><span data-stu-id="48cea-105">Represents the `hyperlink` property.</span></span>
 
-      <span data-ttu-id="1a4fb-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a4fb-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="48cea-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48cea-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -47,9 +47,9 @@ items:
           - excel.Excel.RangeHyperlink
   - uid: excel_release.Excel.SettableCellProperties.style
     summary: |-
-      <span data-ttu-id="1a4fb-107">表示`style`属性。</span><span class="sxs-lookup"><span data-stu-id="1a4fb-107">Represents the `style` property.</span></span>
+      <span data-ttu-id="48cea-107">表示`style`属性。</span><span class="sxs-lookup"><span data-stu-id="48cea-107">Represents the `style` property.</span></span>
 
-      <span data-ttu-id="1a4fb-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a4fb-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="48cea-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48cea-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -60,3 +60,80 @@ items:
       return:
         type:
           - string
+        description: |-
+
+
+          #### <a name="examples"></a><span data-ttu-id="48cea-109">示例</span><span class="sxs-lookup"><span data-stu-id="48cea-109">Examples</span></span>
+
+          ```typescript
+          await Excel.run(async (context) => {
+              const sheet = context.workbook.worksheets.getActiveWorksheet();
+
+              // Creating the SettableCellProperties objects to use for the range.
+              // In your add-in, these should be created once, outside the function.
+              const topHeaderProps: Excel.SettableCellProperties = {
+                  // The style property takes a string matching the name of an Excel style.
+                  // Note that a style will overwrite any formatting,
+                  // so do not use the format property with the style property.
+                  style: "Heading1"
+              };
+
+              const headerProps: Excel.SettableCellProperties = {
+                  // Any subproperties of format that are not set will not be changed when these cell properties are set.
+                  format: {
+                      fill: {
+                          color: "Blue"
+                      },
+                      font: {
+                          color: "White",
+                          bold: true
+                      }
+                  }
+              };
+
+              const nonApplicableProps: Excel.SettableCellProperties = {
+                  format: {
+                      fill: {
+                          pattern: Excel.FillPattern.gray25
+                      },
+                      font: {
+                          color: "Gray",
+                          italic: true
+                      }
+                  }
+              };
+
+              const matchupScoreProps: Excel.SettableCellProperties = {
+                  format: {
+                      borders: {
+                          bottom: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          left: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          right: {
+                              style: Excel.BorderLineStyle.continuous
+                          },
+                          top: {
+                              style: Excel.BorderLineStyle.continuous
+                          }
+                      }
+                  }
+              };
+
+              const range = sheet.getRange("A1:E5");
+
+              // You can use empty JSON objects to avoid changing a cell's properties.
+              range.setCellProperties([
+                  [topHeaderProps, {}, {}, {}, {}],
+                  [{}, {}, headerProps, headerProps, headerProps],
+                  [{}, headerProps, nonApplicableProps, matchupScoreProps, matchupScoreProps],
+                  [{}, headerProps, matchupScoreProps, nonApplicableProps, matchupScoreProps],
+                  [{}, headerProps, matchupScoreProps, matchupScoreProps, nonApplicableProps]
+              ]);
+
+              sheet.getUsedRange().format.autofitColumns();
+              await context.sync();
+          });
+          ```
